--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
-    "name": "nodejs-starter",
+    "name": "dsc-kiet-portal",
     "version": "1.0.0",
-    "description": "",
+    "description": "DSC-KIET portal",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon node index.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon index.js"
     },
-    "author": "",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/dsckiet/dsc-kiet-portal.git"
+    },
+    "author": "DSC-KIET",
     "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/dsckiet/dsc-kiet-portal/issues"
+    },
+    "homepage": "https://github.com/dsckiet/dsc-kiet-portal#readme",
     "dependencies": {
-        "body-parser": "^1.18.3",
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
+        "compression": "^1.7.4",
         "cors": "^2.8.5",
-        "dotenv": "^7.0.0",
-        "ejs": "^2.6.1",
-        "express": "^4.16.4",
-        "mongoose": "^5.4.21",
-        "nodemon": "^1.19.1",
-        "path": "^0.12.7"
+        "dotenv": "^8.1.0",
+        "ejs": "^3.0.1",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.7.3",
+        "nodemon": "^1.19.3"
     }
 }
