--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
         "ejs": "^3.0.1",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
+        "kue": "^0.11.6",
         "log4js": "^6.1.2",
         "mongoose": "^5.7.3",
-        "nodemon": "^1.19.3"
+        "morgan": "^1.9.1",
+        "nodemailer": "^6.4.5",
+        "nodemon": "^1.19.3",
+        "path": "^0.12.7",
+        "redis": "^3.0.2"
     }
 }
