--add: helmet and headers

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "dotenv": "^8.1.0",
         "ejs": "^3.0.1",
         "express": "^4.17.1",
+        "helmet": "^3.21.3",
         "jsonwebtoken": "^8.5.1",
         "kue": "^0.11.6",
         "log4js": "^6.1.2",
