--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "homepage": "https://github.com/dsckiet/dsc-kiet-portal#readme",
     "dependencies": {
+        "aws-sdk": "^2.640.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "compression": "^1.7.4",
@@ -31,6 +32,8 @@
         "log4js": "^6.1.2",
         "mongoose": "^5.7.3",
         "morgan": "^1.9.1",
+        "multer": "^1.4.2",
+        "multer-s3": "^2.9.0",
         "nodemailer": "^6.4.5",
         "nodemon": "^1.19.3",
         "path": "^0.12.7",
