--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "homepage": "https://github.com/dsckiet/dsc-kiet-portal#readme",
     "dependencies": {
+        "@pdf-lib/fontkit": "^1.0.0",
         "aws-sdk": "^2.640.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
@@ -37,6 +38,7 @@
         "nodemailer": "^6.4.5",
         "nodemon": "^1.19.3",
         "path": "^0.12.7",
+        "pdf-lib": "^1.6.1",
         "redis": "^3.0.2"
     }
 }
