--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
-    "name": "dsc-kiet-portal",
-    "version": "1.0.0",
-    "description": "DSC-KIET portal",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon index.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/dsckiet/dsc-kiet-portal.git"
-    },
-    "author": "DSC-KIET",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/dsckiet/dsc-kiet-portal/issues"
-    },
-    "homepage": "https://github.com/dsckiet/dsc-kiet-portal#readme",
-    "dependencies": {
-        "@pdf-lib/fontkit": "^1.0.0",
-        "@sentry/node": "^5.15.5",
-        "aws-sdk": "^2.640.0",
-        "bcryptjs": "^2.4.3",
-        "body-parser": "^1.19.0",
-        "compression": "^1.7.4",
-        "cors": "^2.8.5",
-        "dotenv": "^8.1.0",
-        "ejs": "^3.0.1",
-        "express": "^4.17.1",
-        "helmet": "^3.21.3",
-        "jsonwebtoken": "^8.5.1",
-        "kue": "^0.11.6",
-        "log4js": "^6.1.2",
-        "mongoose": "^5.7.3",
-        "morgan": "^1.9.1",
-        "multer": "^1.4.2",
-        "multer-s3": "^2.9.0",
-        "nodemailer": "^6.4.5",
-        "nodemon": "^1.19.3",
-        "path": "^0.12.7",
-        "pdf-lib": "^1.7.0",
-        "redis": "^3.0.2"
-    }
+	"name": "dsc-kiet-portal",
+	"version": "1.0.0",
+	"description": "DSC-KIET portal",
+	"main": "index.js",
+	"scripts": {
+		"dev": "nodemon index.js",
+		"prod": "node index.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/dsckiet/dsc-kiet-portal.git"
+	},
+	"author": "DSC-KIET",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/dsckiet/dsc-kiet-portal/issues"
+	},
+	"homepage": "https://github.com/dsckiet/dsc-kiet-portal#readme",
+	"dependencies": {
+		"@pdf-lib/fontkit": "^1.0.0",
+		"@sentry/node": "^5.15.5",
+		"aws-sdk": "^2.640.0",
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.19.0",
+		"compression": "^1.7.4",
+		"cors": "^2.8.5",
+		"dotenv": "^8.1.0",
+		"ejs": "^3.0.1",
+		"express": "^4.17.1",
+		"helmet": "^3.21.3",
+		"jsonwebtoken": "^8.5.1",
+		"kue": "^0.11.6",
+		"log4js": "^6.1.2",
+		"mongoose": "^5.7.3",
+		"morgan": "^1.9.1",
+		"multer": "^1.4.2",
+		"multer-s3": "^2.9.0",
+		"nodemailer": "^6.4.5",
+		"nodemon": "^1.19.3",
+		"path": "^0.12.7",
+		"pdf-lib": "^1.7.0",
+		"redis": "^3.0.2"
+	}
 }
