--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"multer": "^1.4.2",
 		"multer-s3": "^2.9.0",
 		"nodemailer": "^6.4.5",
+		"nodemailer-html-to-text": "^3.1.0",
 		"nodemon": "^1.19.3",
 		"path": "^0.12.7",
 		"pdf-lib": "^1.7.0",
