production setup update:code style, format, optimisations chore: logging, middlewares, formatter update: validations, routes refactor: services

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,27 @@
 NODE_ENV=development
 #production
 PORT=
+
 MONGO_URI_DEV=
 MONGO_URI_PROD=
+
 JWT_PRIVATE_KEY=
-REDIS_URL=
+JWT_ALGORITHM=
+JWT_ISSUER=
+JWT_AUDIENCE=
+
 EMAIL_USER=
 EMAIL_PASS=
 EMAIL_HOST=
 SENDER_EMAIL=
+
 AWS_KEY=
 AWS_SECRET=
 AWS_BUCKET_NAME=
 AWS_REGION=
+
 AVATAR_URL=
+
 GET_BIRTHDAYS_PROCESS_SECRET=
+
 SENTRY_DSN=
