--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"chalk": "^4.1.1",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
+		"csvtojson": "^2.0.10",
 		"dotenv": "^8.1.0",
 		"ejs": "^3.0.1",
 		"express": "^4.17.1",
