--add: rate limiting

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"dotenv": "^8.1.0",
 		"ejs": "^3.0.1",
 		"express": "^4.17.1",
+		"express-rate-limit": "^5.2.6",
 		"helmet": "^3.21.3",
 		"jsonwebtoken": "^8.5.1",
 		"kue": "^0.11.6",
