--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"nodemon": "^2.0.4",
 		"path": "^0.12.7",
 		"pdf-lib": "^1.7.0",
+		"rate-limit-redis": "^2.1.0",
 		"redis": "^3.0.2",
 		"uuidv4": "^6.2.7"
 	},
