--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"mongoose": "^5.7.3",
 		"multer": "^1.4.2",
 		"multer-s3": "^2.9.0",
+		"newrelic": "^7.4.0",
 		"nodemailer": "^6.4.5",
 		"nodemailer-html-to-text": "^3.1.0",
 		"nodemon": "^2.0.4",
