--- a/.github/workflows/node_prod.js.yml
+++ b/.github/workflows/node_prod.js.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: git push git@github.com:dsckiet/website-backend-v2.git    
+    - run: git pull git@github.com:dsckiet/website-backend-v2.git    
     - run: npm install
     - run: sudo pm2 kill
     - run: sudo pm2 start index
