--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,6 +24,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: git pull
     - run: npm install
-    - run: npm run build --if-present
+    - run: sudo pm2 restart index
     #- run: npm test
